3_ano/C/prática/aula02/E4/PrefixCalculator.g4
grammar PrefixCalculator;
program:
    stat* EOF
    ;

stat:
    expr? NEWLINE
    ;

expr:
    op=('+'|'-'|'*'|'/') expr expr  # ExprPrefix
    | Number                        # Number
    ;

Number: [0-9]+;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
